--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="main-container">
       <div id="overlay" class="start">
-        <h2 class="title">Wheel of Success for my little monsterss</h2>
+        <h2 class="title">Wheel of Success</h2>
         <a class="btn__reset">Start Game</a>
       </div>
 
@@ -42,6 +42,11 @@
         </ol>
       </div>
     </div>
-    <script type="text/javascript" src="app.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous">
+    </script>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
